--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "react-tieba",
-  "description": "Baidu post bar react+typescript demo",
-  "private": true,
+  "name": "graphql-demo-frontend",
+  "description": "Graphql + apollo front-end demo project",
+  "version": "0.1",
+  "private": false,
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --config build/webpack.dev.js",
-    "build": "webpack --progress --colors --mode production",
-    "tslint:fix": "tslint --fix \"src/**/*.{ts,tsx}\" ",
-    "analyz": "NODE_ENV=production npm_config_report=true npm run build",
     "gen-init": "gql-gen init",
-    "n": "gql-gen --config codegen.yml"
+    "sync": "gql-gen --config codegen.yml"
   },
   "dependencies": {
     "apollo-boost": "^0.1.23",
-    "apollo-link-http": "1.5.5 - latest",
     "async-validator": "^1.10.1",
     "axios": "^0.18.0",
     "graphql": "^14.0.2",
@@ -20,9 +17,7 @@
     "lodash": "^4.17.11",
     "react": "^16.4.2",
     "react-apollo": "^2.3.3",
-    "react-dom": "^16.4.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.119",
@@ -58,7 +53,7 @@
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.22.1",
-    "ts-loader": "^4.5.0",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "tslint-config-standard": "^7.1.0",
@@ -73,6 +68,5 @@
     "graphql-codegen-typescript-common": "0.15.2",
     "graphql-codegen-typescript-server": "^0.15.2",
     "graphql-codegen-introspection": "^0.15.2"
-  },
-  "browserslist": "> 0.25%, not dead"
+  }
 }
